# SantyHogar

./: .gitignore  .railwayignore  ACCIONES_INMEDIATAS_SESION_6.md  ANALISIS_COMMITS_CASSIEL_VS_FACUNDO.md  CAMBIOS_SCRIPTS_INICIO.md  CAMBIOS_TECNICO_DETALLADO.md  CHECKLIST_DEPLOY.md  CHECKLIST_FINAL_SESION_7.md  COMMIT_ANALYSIS_COMPARISON_MATRIX.md  COMMIT_ANALYSIS_COMPREHENSIVE.md  COMMIT_ANALYSIS_QUICK_REFERENCE.md  COMO_CONTINUAR_SESION_6.md  CORRECCION_CHECKOUT_MERCADOPAGO.md  DEPLOYMENT_SESION_7.md  DEPLOY_HOSTINGER.md  DEPLOY_RAILWAY.md  Dockerfile  ESTADO_PROYECTO_SESION_5.md  FEATURE_INSTALLMENTS.md  FINAL_SESION_7.md  FLUJO_USUARIO_CAMBIOS.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTACION_ECOMMERCE_MVP_SESION_5.md  IMPLEMENTACION_MERCADOPAGO_CHECKOUT_PRO.md  INDICE_ANALISIS_COMPLETO.md  INDICE_SESION_5.md  INICIO_RAPIDO.md  INSTRUCCIONES_PRUEBA_FAVORITOS.md  INSTRUCCIONES_SUPABASE_INDICES.md  MEJORAS_UX_IMPLEMENTADAS.md  PASOS_DEPLOY_RAILWAY_AHORA.md  PASOS_SIGUIENTES_SESION_3.md  PROGRESO_BACKEND.md  PROXIMOS_PASOS_SESION_2.md  Procfile  QUE_HACER_AHORA.md  QUICK_REFERENCE.md  QUICK_START_SESION_7.md  RAILWAY_RAILPACK_VS_NIXPACKS.md  README.md  (+72 more)
backend/: .env.example  check_addresses.py  check_all_orders.py  check_latest_order.py  check_trigger.py  execute_migration_016.py  execute_sql_migration.py  fix_addresses_timezone.py  requirements.txt  run_dev.py  run_migration_015.py  run_timezone_fix_addresses.py  setup_backend.ps1  start_backend.ps1  test_address_creation.py  test_checkout.py  test_get_addresses.py  test_mp_direct.py  verify_pending_payment_system.py
(+447 files in other folders)
