[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "santyhogar"
version = "1.0.0"
description = "SantyHogar E-commerce"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "supabase==2.3.4",
    "gotrue==2.8.1",
    "httpx==0.25.2",
    "httpcore==1.0.9",
    "websockets>=11,<13",
    "mercadopago==2.2.1",
    "pydantic>=2.10.4,<3",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "python-dotenv==1.0.0",
    "python-docx==1.1.0",
    "openpyxl==3.1.2",
]
